--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "spearjin",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.3"
-
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.9"
   }
 }
